[gd_scene load_steps=10 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/thud.wav" type="AudioStream" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://addons/qodot/textures/base/dev_grey_256.png" type="Texture" id=4]
[ext_resource path="res://assets/box.png" type="Texture" id=5]
[ext_resource path="res://Arm.tscn" type="PackedScene" id=6]

[sub_resource type="SphereShape" id=4]
radius = 0.36481

[sub_resource type="SpatialMaterial" id=2]
params_blend_mode = 1
albedo_texture = ExtResource( 4 )

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 2 )
flip_faces = true
radius = 0.4
mid_height = 0.2

[node name="Player" type="Spatial"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="Player" type="RigidBody" parent="."]
gravity_scale = 0.0
continuous_cd = true
contacts_reported = 3
contact_monitor = true
can_sleep = false
script = ExtResource( 3 )

[node name="Sprite3D" type="Sprite3D" parent="Player"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 2.16195e-08, 0, 0.494596 )
texture = ExtResource( 5 )

[node name="Pivot" type="Spatial" parent="Player"]

[node name="Camera" type="Camera" parent="Player/Pivot"]
transform = Transform( -1, 3.25841e-07, 0, 3.25841e-07, 1, 3.25841e-07, 1.06581e-13, 3.25841e-07, -1, 0, 0, 0 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player/Pivot/Camera"]

[node name="HUD" parent="Player/Pivot/Camera/CanvasLayer" instance=ExtResource( 1 )]

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.93014e-09, 0, 0.112788 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="Player"]
transform = Transform( 1, -1.41787e-14, 0, 0, 1, 0, 0, 6.19773e-22, 1, 0, 0, 0 )
mesh = SubResource( 3 )
material/0 = null

[node name="SpotLight" type="SpotLight" parent="Player"]
transform = Transform( 1, -4.00452e-09, 5.20135e-10, -4.03385e-09, -0.984662, 0.174473, -1.86525e-10, -0.174473, -0.984662, 0, 0.277194, 0.4 )
light_color = Color( 0.905882, 0.905882, 0.905882, 1 )
light_energy = 2.17
light_indirect_energy = 1.76
shadow_enabled = true
spot_range = 15.0

[node name="ThudPlayer" type="AudioStreamPlayer3D" parent="Player"]
stream = ExtResource( 2 )

[node name="LeftArmJoint" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.400001, -0.273591, -0.381953 )
nodes/node_a = NodePath("../Player")
nodes/node_b = NodePath("../LeftArm")
linear_motor_x/target_velocity = -2.0
linear_motor_x/force_limit = 1.0
angular_motor_x/target_velocity = 1.0
angular_limit_y/upper_angle = 10.0
angular_limit_y/lower_angle = -25.0
angular_motor_y/enabled = true
angular_motor_y/target_velocity = -2.0
angular_motor_y/force_limit = 1.0

[node name="LeftArm" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, -0.273591, 0.368048 )

[node name="RightArmJoint" type="Generic6DOFJoint" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.399999, -0.273591, -0.381952 )
nodes/node_a = NodePath("../Player")
nodes/node_b = NodePath("../RightArm")
linear_motor_x/target_velocity = -2.0
linear_motor_x/force_limit = 1.0
angular_motor_x/target_velocity = 1.0
angular_limit_y/upper_angle = 25.0
angular_limit_y/lower_angle = -10.0
angular_motor_y/enabled = true
angular_motor_y/target_velocity = 2.0
angular_motor_y/force_limit = 1.0

[node name="RightArm" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, -0.273591, 0.368048 )
